--- a/lib/variables/CMakeLists.txt
+++ b/lib/variables/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 2.6)
 
 #exportLibrary
 add_library(variable variable.cpp)
+
+install (TARGETS variable DESTINATION lib)
