--- a/lib/calculations/CMakeLists.txt
+++ b/lib/calculations/CMakeLists.txt
@@ -21,3 +21,15 @@ install (TARGETS div DESTINATION lib)
 
 add_library(abs abs.cpp)
 install (TARGETS abs DESTINATION lib)
+
+add_library(transpose transpose.cpp)
+install (TARGETS transpose DESTINATION lib)
+
+add_library(sin sin.cpp)
+install (TARGETS sin DESTINATION lib)
+
+add_library(cos cos.cpp)
+install (TARGETS cos DESTINATION lib)
+
+add_library(sqrt sqrt.cpp)
+install (TARGETS sqrt DESTINATION lib)
